java8.spoofax3/test/statics/java/classes/fields/unbound.no.spt.bak
module classes/fields/unbound_no

language metaborg-java

test unbound [[

test;



// error: cannot find symbol

[A]
public class A {
    public B f;
}


]] analysis fails
   run javacFails to ""
